Refactor page card item css

--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -7,7 +7,7 @@
 
 
 {% block main %}
-    <div class="item-card" style="margin: auto">
+    <div class="item-card page-card" style="margin: auto">
         <div class="card-header-container">
             <h1 id="objectName">{% if checkout %}Checkout {{ checkout.checkout_id }}{% else %}Create Checkout{% endif %}</h1>
             {% if checkout %}
