--- a/app/templates/documentation.html
+++ b/app/templates/documentation.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="item-card" style="margin: auto">
+    <div class="item-card page-card" style="margin: auto">
         <div class="card-header-container">
             <h1 id="objectName">{% if document %}{{ document.description }}{% else %}Create Document{% endif %}</h1>
             {% if document and current_user and current_user.is_admin %}
