--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     <title>Inventory</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/header.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/main_content.css') }}">
     {% block styles %}{% endblock %}
     <script src="{{ url_for('static', filename='javascript/utils.js') }}"></script>
 </head>
