--- a/app/templates/checkout_list.html
+++ b/app/templates/checkout_list.html
@@ -8,7 +8,7 @@
 
 {% block main %}
     <div class="page-container">
-        <div class="list-table highlightable" style="max-width: 1200px;">
+        <div class="list-table highlightable page-card" style="max-width: 1200px;">
             <div class="table-label">
                 <h3>Checkouts</h3>
                 {% if current_user.is_authenticated %}
