--- a/app/templates/employee_list.html
+++ b/app/templates/employee_list.html
@@ -8,7 +8,7 @@
 
 {% block main %}
     <div class="page-container">
-        <div class="list-table highlightable" style="max-width: 1000px;">
+        <div class="list-table highlightable page-card" style="max-width: 1000px;">
             <div class="table-label">
                 <h3>Employees</h3>
                 {% if current_user.is_authenticated and current_user.is_admin %}
