Fix print button text color

--- a/app/templates/documentation.html
+++ b/app/templates/documentation.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="action-row">
                     {% if document %}
-                        <button type="button" id="printButton" class="btn btn-info shadow-none"
+                        <button type="button" id="printButton" class="btn btn-info shadow-none" style="color: white;"
                                 onclick="window.print()">
                             Print Label
                         </button>
