--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="action-row">
                     {% if item %}
-                        <button type="button" id="printButton" class="btn btn-info shadow-none"
+                        <button type="button" id="printButton" class="btn btn-info shadow-none" style="color: white;"
                                 onclick="window.print()">
                             Print Label
                         </button>
