Fix label and input text of display cards

--- a/app/static/stylesheets/item.css
+++ b/app/static/stylesheets/item.css
@@ -36,6 +36,7 @@
 .label {
     font-weight: bold;
     color: #555;
+    padding: 5px;
 }
 
 .value {
@@ -47,6 +48,8 @@
     width: 60%;
     background-color: #ececec;
     color: #666;
+    padding: 5px;
+    border-radius: 4px;
 }
 
 input, select {
@@ -54,6 +57,8 @@ input, select {
     background-color: #f4f4f4;
     color: #333;
     width: 60%;
+    padding: 5px;
+    border-radius: 4px;
 }
 
 input:disabled, select:disabled {
