--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -31,8 +31,7 @@
                                 <input type="password" class="form-control" id="password" name="password" required>
                             </div>
                             <div class="text-center mb-3">
-                                <button type="submit" class="btn btn-success btn-block w-100" id="submitButton">Sign
-                                    In</button>
+                                <button type="submit" class="btn btn-success btn-block w-100" id="submitButton">Sign In</button>
                             </div>
                         </form>
                         <p class="text-center"><a href="/resetPassword" class="text-decoration-none">Forgot Password?</a></p>
