--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block main %}
+    <div class="page-container">
     <div class="container">
         <div class="row">
             <div class="col-md-6" style="border: 1px solid #ddd; padding: 20px; background-color: #f8f9fa;">
@@ -112,5 +113,6 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 {% endblock %}
