--- a/app/templates/employee.html
+++ b/app/templates/employee.html
@@ -7,6 +7,7 @@
 
 
 {% block main %}
+    <div class="page-container">
     <div class="item-card page-card" style="margin: auto">
         <div class="card-header-container">
             <h1 id="objectName">{% if employee %}{{ employee.first_name }}{% else %}Create Employee{% endif %}</h1>
@@ -115,6 +116,7 @@
                 {% endif %}
             </div>
         </form>
+    </div>
     </div>
     {% if current_user.is_authenticated %}
         <script src="{{ url_for('static', filename='javascript/update_form.js') }}"></script>
