--- a/app/templates/checkout_list.html
+++ b/app/templates/checkout_list.html
@@ -1,40 +1,47 @@
 {% extends 'base.html' %}
 
-
 {% block styles %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/large_table.css') }}">
+    {# <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/large_table.css') }}"> #}
 {% endblock %}
-
-
 {% block main %}
-    <div class="page-container">
-        <div class="list-table highlightable page-card" style="max-width: 1200px;">
-            <div class="table-label">
-                <h3>Checkouts</h3>
-                {% if current_user.is_authenticated %}
-                    <a href="{{ url_for('main.create_checkout') }}" class="btn btn-success" role="button">Create</a>
-                {% endif %}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Checkouts</h3>
+                        {% if current_user.is_authenticated %}
+                            <a href="{{ url_for('main.create_checkout') }}" class="btn btn-success" role="button">
+                                <img src="{{ url_for('static', filename='images/checkout.png') }}" alt="Add" style="width: 24px; height: 24px;">
+                            </a>
+                        {% endif %}
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Item Id</th>
+                                    <th>Employee Id</th>
+                                    <th>Checkout Date</th>
+                                    <th>Return Date</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for checkout in checkouts %}
+                                    <tr onclick="window.location.href='{{ url_for('main.checkout_details', checkout_id=checkout.checkout_id) }}';">
+                                        <td>{{ checkout.item_id }}</td>
+                                        <td>{{ checkout.employee_id }}</td>
+                                        <td>{{ checkout.checkout_date }}</td>
+                                        <td>{{ checkout.returned_date }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <table>
-                <thead>
-                <tr>
-                    <th>Item Id</th>
-                    <th>Employee Id</th>
-                    <th>Checkout Date</th>
-                    <th>Return Date</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for checkout in checkouts %}
-                    <tr onclick="window.location.href='{{ url_for('main.checkout_details', checkout_id=checkout.checkout_id) }}';">
-                        <td>{{ checkout.item_id }}</td>
-                        <td>{{ checkout.employee_id }}</td>
-                        <td>{{ checkout.checkout_date }}</td>
-                        <td>{{ checkout.returned_date }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
         </div>
     </div>
 {% endblock %}
