--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,9 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     {% if current_user.is_authenticated %}
-                        <button type="button" class="btn btn-primary mx-1" onclick="window.location.href='/myProfile'">My Profile</button>
+                        {% if current_user.employee_id %}
+                            <button type="button" class="btn btn-primary mx-1" onclick="window.location.href='/myProfile'">My Profile</button>
+                        {% endif %}
                         <form action="{{ url_for('auth.logout') }}" method="post" class="d-inline">
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                             <button type="submit" class="btn btn-danger mx-1">Log Out</button>
