--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -58,15 +58,15 @@
                             <input type="hidden" id="objectId" name="checkout_id" value="{{ checkout.checkout_id if checkout }}"
                                 disabled readonly>
                             <p id="responseText"></p>
-                            <div class="form-group">
+                            <div class="primary-action-container">
                                 {% if (checkout and current_user.employee_id == checkout.employee_id) or (current_user.is_authenticated and current_user.is_admin) %}
                                     {% if checkout and checkout.returned_date in (None, "") %}
-                                        <button type="button" id="returnButton" class="btn btn-primary"
+                                        <button type="button" id="returnButton" class="btn btn-primary shadow-none"
                                                 onclick="returnCheckout('{{ url_for("api.return_checkout_by_id", checkout_id=checkout.checkout_id) }}')">
                                             Return Checkout
                                         </button>
                                     {% elif not checkout %}
-                                        <button type="button" id="editButton" class="btn btn-success btn-block w-100"
+                                        <button type="button" id="editButton" class="btn btn-success shadow-none"
                                                 onclick="toggleEdit('{{ url_for("api.create_checkout") }}')">
                                             Create
                                         </button>
